--- a/src/App.css
+++ b/src/App.css
@@ -131,8 +131,88 @@
     justify-content: center;
   }
 }
+/* Page GAMES */
+.gamespage {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+  object-fit: contain;
+  align-items: flex-start;
+}
 
+.gamespage-video {
+  object-fit: cover;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
 
+#gamesmainpage {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.gamescontent {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-width: 460px;
+  margin: 0;
+}
+
+.gametext {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+  gap: 24px;
+}
+
+.rectangle2 {
+  width: 20px;
+  height: 100px;
+  background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #ffffff 100%);
+  margin-top: 8px;
+  animation-duration: 0.7s;
+}
+
+.description2 {
+  color: white;
+  max-width: 450px;
+  text-align: justify;
+  line-height: 1.6;
+  font-weight: 500;
+  font-size: 22px;
+  animation-duration: 0.7s;
+}
+
+.partnerslogo {
+  height: 4.5em;
+}
+
+.carousel {
+  width: 100vw;
+  height: 100%;
+}
+
+@media screen and (max-width: 900px) {
+  #gamesmainpage {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gamescontent {
+    /* same styling is applied to <Vertical Carousel /> in its own css file*/
+    width: 60vw;
+    margin-top: 20vh;
+  }
+}
 
 /* BLOG PAGE */
 
@@ -527,309 +607,267 @@ path {
   text-align: justify;
 }
 
-/* GAMES TWO PAGE */
+/* CONSULTING PAGE */ 
 
-.gamespage {
-  height: 100vh;
+#consultingpage {
   width: 100vw;
   display: flex;
   flex-direction: column;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
   object-fit: contain;
-  align-items: center;
-  justify-content: flex-start;
-  overflow-x: hidden;
-}
-
-.dedra-intro {
-  background: rgba(14, 3, 13, 0.94);
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 99;
-  transition: all .3s;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-
-@keyframes fade-out {
-  from {
-    opacity: 100%;
-  }
-  to {
-    opacity: 0%;
-  }
-}
-
-.dedra-intro h3:last-child {
-  margin-top: 15vh;
-  font-family: 'AddLGBitmap09';
-}
-
-.dedra-intro h3:last-child:hover { 
-  color: #2f9eaf;
-  cursor: pointer;
- }
-
- 
-
-.title-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.dedra-title {
-  color: white;
-  font-family: Montserrat;
-  font-size: 100px;
-}
-
-.loader {
-  height: 70px;
-  width: 71px;
-  position: relative;
-  text-align: center;
-  animation: rotateFrame 2.5s infinite;
-  margin-left: 7px;
-}
-
-@keyframes rotateFrame {
-  0% {
-    transform: none;
-  }
-  
-  90% {
-    transform: none;
-  }
-  
-  100% {
-    transform: rotate(180deg);
-  }
-}
-
-.top {
-  animation: top 2.5s linear infinite;
-  border-top: 35px solid #fff;
-  border-right: 35px solid transparent;
-  border-left: 35px solid transparent;
-  height: 0px;
-  width: 1px;
-  transform-origin: 50% 100%;
-}
-
-@keyframes top {
-  90% { transform: scale(0.3); }
-  100% { transform: scale(0);}
-}
-
-.bottom {
-  animation: bottom 2.5s linear infinite;
-  border-right: 35px solid transparent;
-  border-bottom: 35px solid #fff;
-  border-left: 35px solid transparent;
-  height: 0px;
-  width: 1px;
-  transform: scale(0);
-  transform-origin: 50% 100%;
-}
-
-@keyframes bottom {
-  10% { transform: scale(0); }
-  90% { transform: scale(1); }
-  100% { transform: scale(1); }
+  align-items: flex-start;
 }
 
 .gamespage-video {
-  object-fit: cover;
-  position: fixed;
-  z-index: -1;
-  width: 100%;
+  filter: grayscale(50%);
+  filter: blur(0.2em);
+  position:absolute;
+  height: 100%;
 }
 
-.gamespage .wh-navbar > *,
-.gamespage .wh-nav-link {
+#introduction-container {
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+  row-gap: 3.5em; 
+  text-shadow: black 2px 0 15px;
+}
+
+#introduction-container div > a {
+  padding: 10px;
+  margin: 30px;
+  border: 2px solid white;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 700;
   color: white;
 }
 
-.gamespage .wh-navbar {
-  width: 100%;
-  z-index: 999;
+#introduction-container div > a:hover {
+ animation: turnToGrey 0.6s ease;
+ animation-fill-mode: forwards;
 }
 
-.gamespage.wh-nav-link {
-  display: inline-block;
-  position: relative;
-}
-.gamespage.wh-nav-link:hover {
-  color: rgba(255, 255, 255, 0.9);
+@keyframes turnToGrey {
+
+  from {  color: white;
+          border: 2px solid white;
+        }
+  to {    color: rgb(223, 100, 100);
+          border: 2px solid rgb(223, 100, 100);
+     }
+
+  }
+
+  #previous-work-container {
+    width: 100vw;
+    background-color: rgb(32, 32, 32);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  #previous-work-container h1 {
+    font-weight: 900;
+  }
+
+  #games-helped {
+    width: 100vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 2em;
+  }
+
+  #games-worked {
+    width: 100vw;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    --s: 200px; /* control the size */
+    --c1: #1d1d1d;
+    --c2: #4e4f51;
+    --c3: #3c3c3c;
+    background:
+      repeating-conic-gradient(from 30deg,#0000 0 120deg,var(--c3) 0 180deg) 
+       calc(.5*var(--s)) calc(.5*var(--s)*0.577),
+      repeating-conic-gradient(from 30deg,var(--c1) 0 60deg,var(--c2) 0 120deg,var(--c3) 0 180deg);
+    background-size: var(--s) calc(var(--s)*0.577);
+  }
+
+  #games-img {
+    display: flex;
+    align-items: center;
+  }
+
+  #games-img > a {
+    width: 15em;
+    margin-right: 1.8em;
+    background: transparent;
+  }
+
+  .gamecards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 500px;
+  }
+
+.consulting-cards {
+  border-radius: 4px;
+  background: #181818;
+  height: 90%;
+  width: 28vw;
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 3em;
 }
 
-.gameinfo-container {
+.consulting-cards p { 
+  text-align: start;
+  padding: 30px;
+}
+
+.consulting-cards a {   
+  padding-top: 30px;
+  text-decoration: none;
+  color: white;
+}
+
+.item-img {
+  height: 50%;
+}
+
+#addons-made {
+  width: 100vw;
+  height: 50vh;
+  background-color: white;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2em;
+}
+
+#reviews-introductio h3 b, #addons-made h3 b, #games-worked h3 b, #games-helped h3 b { font-weight: 900; }
+
+#addons-icons { 
+  display: flex;
+  align-items: center;
+  margin: 0 3.5em;
+}
+
+#gallery-container {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 25px;
+  padding: 25px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+
+#gallery-container > img {
+  width: 23vw;
+  height: 40vh;
+  object-fit:cover;
+}
+
+
+#reviews-introduction {
+  width: 100vw;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  color: white;
+  text-shadow: black 2px 0 15px;
+  --s: 200px; /* control the size */
+  --_g: #00000000 90deg,rgb(95, 95, 95) 0;
+  background: 
+      conic-gradient(from 90deg at 2px 2px,var(--_g)),
+      conic-gradient(from 90deg at 1px 1px,var(--_g));
+  background-size: var(--s) var(--s), calc(var(--s)/5) calc(var(--s)/5);
+}
+
+#reviews-quotes {
+  width: 100vw;
+  height: 120vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 49vw;
-  height: 30vh;
-  transform: translateY(-17vh);
-}
-
-.rectangle2 {
-  width: 20px;
-  height: 100px;
-  background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #ffffff 100%);
-  margin-top: 8px;
-  animation-duration: 0.7s;
-}
-
-.description2 {
-  color: white;
-  text-align: justify;
-  line-height: 1.6;
-  font-weight: 500;
-  font-size: 22px;
-  animation-duration: 0.7s;
-  text-shadow: rgb(51, 51, 51) 2px 0 10px;
-}
-
-.partnerslogo {
-  height: 6.5em;
-}
-
-.platformslist {
-  margin-top: -10vh;
-}
-
-
-form {
-  width: 70%;
-  max-width: 350px;
-  margin-top: 10vh;
-}
-form #form-title {
-  margin-top: 0;
-  font-weight: 400;
   text-align: center;
+  --s: 82px; /* control the size */
+  --c1: #f1f1f1;
+  --c2: #ffffff;
+  --c3: #fafafa;
+  --_g: var(--c3) 0 120deg,#0000 0;
+  background:
+    conic-gradient(from -60deg at 50% calc(100%/3),var(--_g)),
+    conic-gradient(from 120deg at 50% calc(200%/3),var(--_g)),
+    conic-gradient(from  60deg at calc(200%/3),var(--c3) 60deg,var(--c2) 0 120deg,#0000 0),
+    conic-gradient(from 180deg at calc(100%/3),var(--c1) 60deg,var(--_g)),
+    linear-gradient(90deg,var(--c1)   calc(100%/6),var(--c2) 0 50%,
+                          var(--c1) 0 calc(500%/6),var(--c2) 0);
+  background-size: calc(1.732*var(--s)) var(--s);
 }
-form #debt-amount-slider {
+#reviews-quotes h1 { 
+  font-size: 40px;
+  margin-bottom: 7vh;
+  font-weight: bolder;
+}
+.quotepp-wrapper { width: 70px; }
+.quotepp-wrapper img {  border-radius: 100% }
+
+#all-quotes {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 6vh;
+}
+
+.quotecard {
+  border-radius: 8%;
   display: flex;
-  flex-direction: row;
-  align-content: stretch;
-  position: relative;
-  width: 100%;
-  height: 50px;
-  user-select: none;
-}
-form #debt-amount-slider::before {
-  content: " ";
-  position: absolute;
-  height: 2px;
-  width: calc(100% * (4 / 5));
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-}
-form #debt-amount-slider input, form #debt-amount-slider label {
-  box-sizing: border-box;
-  flex: 1;
-  user-select: none;
-  cursor: pointer;
-}
-form #debt-amount-slider label {
-  display: inline-block;
-  position: relative;
-  width: 10%;
-  height: 50%;
-  user-select: none;
-}
-form #debt-amount-slider label::before {
-  content: attr(data-debt-amount);
-  position: absolute;
-  left: 50%;
-  padding-top: 10px;
-  transform: translate(-50%, 45px);
-  font-size: 14px;
-  letter-spacing: 0.4px;
-  font-weight: 400;
-  white-space: nowrap;
-  opacity: 0.85;
-  transition: all 0.15s ease-in-out;
-}
-form #debt-amount-slider label::after {
-  content: " ";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 30px;
-  height: 30px;
-  background: #fff;
-  border-radius: 50%;
-  pointer-events: none;
-  user-select: none;
-  z-index: 1;
-  cursor: pointer;
-  transition: all 0.15s ease-in-out;
-}
-form #debt-amount-slider label:hover::after {
-  transform: translate(-50%, -50%) scale(1.25);
-}
-form #debt-amount-slider input {
-  display: none;
-}
-form #debt-amount-slider input:checked + label::before {
-  font-weight: 800;
-  opacity: 1;
-}
-form #debt-amount-slider input:checked + label::after {
-  border-width: 4px;
-  transform: translate(-50%, -50%) scale(0.75);
+  flex-direction: column;
+  row-gap: 20px;
+  justify-content: space-between
 }
 
-#debt-amount-pos {
-  display: block;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  background: #000;
-  border-radius: 50%;
-  transition: all 0.15s ease-in-out;
-  transform: translate(-50%, -50%);
-  border: 2px solid #000;
-  opacity: 1;
-  z-index: 2;
-  top:25%;
-  left: 10%;
-}
-form:valid #debt-amount-slider input + label::before {
-  transform: translate(-50%, 45px) scale(0.9);
-  transition: all 0.15s linear;
-}
-form:valid #debt-amount-slider input:checked + label::before {
-  transform: translate(-50%, 45px) scale(1.1);
-  transition: all 0.15s linear;
+.quotecard p { 
+  line-height: 30px;
+  font-size: medium;
+  text-align: start;
+  max-width: 540px;
 }
 
-.carousel {
-  width: 100vw;
-  height: 100%;
+.card-downside {
+  display: grid;
+  grid-template-columns: 10% 90%;
+  column-gap: 40px;
 }
 
-label input .ovo:checked {
- background-color: black;
- color: black;
+.quotetext-wrapper {
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-@media screen and (max-width: 900px) {
-
-  .gamescontent {
-    /* same styling is applied to <Vertical Carousel /> in its own css file*/
-    width: 60vw;
-    margin-top: 20vh;
-  }
-}
+.quotetext-wrapper > p { font-size: medium; }
