--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,6 @@
 /* Page GAMES */
 
 .gamespage {
-  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -145,6 +144,15 @@
   align-items: center;
   justify-content: flex-start;
   overflow-x: hidden;
+}
+
+.games-carousel-container {
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
 
 .dedra-intro {
@@ -262,6 +270,7 @@
   position: fixed;
   z-index: -1;
   width: 100%;
+  border: 1px solid red;
 }
 
 .gamespage .wh-navbar > *,
@@ -472,7 +481,8 @@ label input .ovo:checked {
 /* ABOUT PAGE */
 
 .aboutpage {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow-x: clip;
   height: 100%;
   background: -moz-linear-gradient(
@@ -500,7 +510,7 @@ label input .ovo:checked {
   font-size: 1.5em;
 }
 .slogancontainer {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -561,6 +571,21 @@ label input .ovo:checked {
   justify-content: center;
   gap: 5em;
   padding-left: 7em;
+  background: -moz-linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
 }
 
 .quisommesnous {
@@ -581,6 +606,21 @@ label input .ovo:checked {
   justify-content: flex-start;
   align-items: center;
   row-gap: 14em;
+  background: -moz-linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
 }
 
 .teammembers {
@@ -998,6 +1038,7 @@ path {
   width: 15em;
   margin-right: 1.8em;
   background: transparent;
+  transition: all .2s ease-in-out
 }
 
 #community-content-container {
@@ -1022,6 +1063,11 @@ path {
   flex-flow: column nowrap;
   margin: 1em;
   text-align: start;
+  transition: all .2s ease-in-out
+}
+
+.consulting-cards:hover, #games-img > a:hover, #addons-icons > a:hover {
+  transform: scale(1.1);
 }
 
 .consulting-cards img {
@@ -1046,27 +1092,6 @@ path {
 .consulting-cards a {
   text-decoration: none;
   color: white;
-}
-
-/* hover effect on all consulting-cars links*/
-.consulting-cards a > h1::after {
-  content: "";
-  position: absolute;
-  width: 0px;
-  height: 3px;
-  left: 50%;
-  bottom: 0;
-  background-color: rgb(255, 255, 255);
-  transition: all ease-in-out 0.2s;
-}
-
-.consulting-cards a > h1:hover::after {
-  width: 100%;
-  left: 0;
-}
-
-.community-content {
-
 }
 
 .item-img {
@@ -1096,6 +1121,10 @@ path {
   display: flex;
   align-items: center;
   margin: 0 3.5em;
+}
+
+#addons-icons > a {
+  transition: all .2s ease-in-out
 }
 
 #gallery-container {
