--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,10 +7,26 @@
 .footer {
   display: flex;
   height: 5vh;
+  width: 100vw;
   align-items: center;
   justify-content: space-between;
   margin: 0;
   border: 0;
+  background: -moz-linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 31%,
+    rgba(221, 221, 221, 1) 100%
+  );
 }
 
 .leftpart {
@@ -26,7 +42,6 @@
   align-items: center;
   justify-content: end;
   column-gap: 3em;
-  margin-right: 3em;
 }
 
 .rightpart a {
