--- a/src/App.css
+++ b/src/App.css
@@ -479,8 +479,6 @@ label input .ovo:checked {
   align-items: center;
 }
 
-/* ABOUT PAGE */
-
 .aboutpage {
   width: 100vw;
   height: 100vh;
@@ -606,7 +604,6 @@ label input .ovo:checked {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  row-gap: 14em;
   background: -moz-linear-gradient(
     270deg,
     rgba(255, 255, 255, 1) 31%,
@@ -628,11 +625,145 @@ label input .ovo:checked {
   display: flex;
   column-gap: 7em;
   margin: 3em;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .teammembers img {
   /* contain */
   object-fit: cover;
+}
+
+.discord-svg {
+  fill: white;
+  height: 55px;
+  width: auto;
+}
+
+.card {
+  width: 450px;
+  height: 250px;
+  background-color: #fff;
+  background: linear-gradient(#f8f8f8, #fff);
+  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
+  border-radius: 6px;
+  overflow: hidden;
+  position: relative;
+  margin: 1.5rem;
+}
+
+.card h1 {
+  text-align: center;
+}
+
+.card .additional {
+  position: absolute;
+  width: 150px;
+  height: 100%;
+  background: linear-gradient(#dE685E, #EE786E);
+  transition: width 0.4s;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.card.green .additional {
+  background: linear-gradient(#92bCa6, #A2CCB6);
+}
+
+.card:hover .additional {
+  width: 100%;
+  border-radius: 0 5px 5px 0;
+}
+
+.card .additional .more-info {
+  width: 300px;
+  float: left;
+  position: absolute;
+  left: 150px;
+  height: 100%;
+}
+
+.card .additional .more-info h1 {
+  color: #fff;
+  margin-bottom: 0;
+}
+
+.card.green .additional .more-info h1 {
+  color: #224C36;
+}
+
+.card .additional .coords {
+  margin: 0 1rem;
+  color: #fff;
+  font-size: 1rem;
+}
+
+.card.green .additional .coords {
+  color: #325C46;
+}
+
+.card .additional .coords span + span {
+  float: right;
+}
+
+.card .additional .stats {
+  font-size: 2rem;
+  display: flex;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  right: 1rem;
+  top: auto;
+  color: #fff;
+}
+
+.card.green .additional .stats {
+  color: #325C46;
+}
+
+.card .additional .stats > div {
+  flex: 1;
+  text-align: center;
+}
+
+.card .additional .stats i {
+  display: block;
+}
+
+.card .additional .stats div.title {
+  font-size: 0.75rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.card .additional .stats div.value {
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 1.5rem;
+}
+
+.card .additional .stats div.value.infinity {
+  font-size: 2.5rem;
+}
+
+.card .general {
+  width: 300px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  box-sizing: border-box;
+  padding: 1rem;
+  padding-top: 0;
+}
+
+.card .general .more {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  font-size: 0.9em;
 }
 
 @media screen and (max-width: 1080px) {
@@ -930,6 +1061,15 @@ path {
   color: white;
   row-gap: 3.5em;
   text-shadow: black 2px 0 15px;
+}
+
+#go-back-up {
+  position: fixed;
+  right: 5vw;
+  bottom: 0;
+  height: 100px;
+  width: auto;
+  filter: drop-shadow(5px 0px 15px rgba(255,255,255, 1));
 }
 
 #introduction-container h1 {
